--- a/finish-line/css/style.css
+++ b/finish-line/css/style.css
@@ -18,10 +18,9 @@ html, body {
 .finish-line {
    width: 100vw;
    height: 100px;
-   justify-content: center;
-   align-items: center;
    flex-direction: row;
    flex-wrap: wrap;
+   overdlow: hidden;
 }
 
 .black {
