--- a/finish-line/css/style.css
+++ b/finish-line/css/style.css
@@ -43,3 +43,17 @@ html, body {
    top: 20%;
    font-size: 40px;
 }
+
+#blue {
+   position: fixed;
+   background: blue;
+   width: 50px;
+   height: 50px;
+}
+
+#red {
+   position: fixed;
+   background: red;
+   width: 50px;
+   height: 50px;
+}
