--- a/finish-line/css/style.css
+++ b/finish-line/css/style.css
@@ -49,6 +49,8 @@ html, body {
    background: blue;
    width: 50px;
    height: 50px;
+   left: 20px;
+   bottom: 20px;
    border-radius: 50%;
 }
 
@@ -57,5 +59,7 @@ html, body {
    background: red;
    width: 50px;
    height: 50px;
+   right: 20px;
+   bottom: 20px;
    border-radius: 50%;
 }
