--- a/finish-line/css/style.css
+++ b/finish-line/css/style.css
@@ -58,6 +58,12 @@ html, body {
    left: 20px;
    bottom: 20px; 
    --border-radius: 50%;
+   -webkit-touch-callout: none;
+   -webkit-user-select: none;
+   -khtml-user-select: none;
+   -moz-user-select: none;
+   -ms-user-select: none;
+    user-select: none;
 }
 
 #red {
@@ -68,4 +74,10 @@ html, body {
    right: 20px;
    bottom: 20px;
    border-radius: 50%;
+   -webkit-touch-callout: none;
+   -webkit-user-select: none;
+   -khtml-user-select: none;
+   -moz-user-select: none;
+   -ms-user-select: none;
+    user-select: none;
 }
