--- a/finish-line/css/style.css
+++ b/finish-line/css/style.css
@@ -51,6 +51,8 @@ html, body {
 }
 
 #blue {
+   border: 2px solid black;
+   color: block;
    position: fixed;
    background: blue;
    width: 50px;
@@ -67,6 +69,8 @@ html, body {
 }
 
 #red {
+   border: 2px solid black;
+   color: block;
    position: fixed;
    background: red;
    width: 50px;
