--- a/finish-line/css/style.css
+++ b/finish-line/css/style.css
@@ -54,12 +54,13 @@ html, body {
    border: 2px solid black;
    color: black;
    position: fixed;
-   background: blue;
+   background: "#99f";
+   font-size: 100px;
    width: 50px;
    height: 50px;
    left: 20px;
    bottom: 20px; 
-   --border-radius: 50%;
+   border-radius: 50%;
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
@@ -72,7 +73,8 @@ html, body {
    border: 2px solid black;
    color: black;
    position: fixed;
-   background: red;
+   background: "#f99";
+   font-size: 100px;
    width: 50px;
    height: 50px;
    right: 20px;
