--- a/finish-line/css/style.css
+++ b/finish-line/css/style.css
@@ -54,7 +54,7 @@ html, body {
    border: 2px solid black;
    color: black;
    position: fixed;
-   background: "#99f";
+   background: #99f;
    font-size: 100px;
    width: 50px;
    height: 50px;
@@ -67,13 +67,18 @@ html, body {
    -moz-user-select: none;
    -ms-user-select: none;
     user-select: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
 }
 
 #red {
    border: 2px solid black;
    color: black;
    position: fixed;
-   background: "#f99";
+   background: #f99;
    font-size: 100px;
    width: 50px;
    height: 50px;
@@ -86,4 +91,9 @@ html, body {
    -moz-user-select: none;
    -ms-user-select: none;
     user-select: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
 }
