--- a/finish-line/css/style.css
+++ b/finish-line/css/style.css
@@ -54,7 +54,7 @@ html, body {
    border: 2px solid black;
    color: black;
    position: fixed;
-   background: #99f;
+   background: #999;
    font-size: 50px;
    width: 50px;
    height: 50px;
@@ -78,7 +78,7 @@ html, body {
    border: 2px solid black;
    color: black;
    position: fixed;
-   background: #f99;
+   background: #fff;
    font-size: 50px;
    width: 50px;
    height: 50px;
