--- a/finish-line/css/style.css
+++ b/finish-line/css/style.css
@@ -51,10 +51,14 @@ html, body {
 }
 
 #blue {
+   background-img: url("img/eye.png");
+   background-repeat: no-repeat;
+   background-attachment: fixed;
+   background-position: center;
    border: 2px solid black;
    color: black;
    position: fixed;
-   background: #999;
+   background: #fff;
    font-size: 50px;
    width: 50px;
    height: 50px;
@@ -75,6 +79,10 @@ html, body {
 }
 
 #red {
+   background-img: url("img/eye.png");
+   background-repeat: no-repeat;
+   background-attachment: fixed;
+   background-position: center;
    border: 2px solid black;
    color: black;
    position: fixed;
