--- a/finish-line/css/style.css
+++ b/finish-line/css/style.css
@@ -51,7 +51,7 @@ html, body {
 }
 
 #blue {
-   background-image: url("img/eye.png");
+   background: url("img/eye.png");
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
@@ -79,7 +79,7 @@ html, body {
 }
 
 #red {
-   background-image: url("img/eye.png");
+   background: url("img/eye.png");
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
