--- a/talking-bot/css/style.css
+++ b/talking-bot/css/style.css
@@ -11,7 +11,7 @@ html, body {
     align-items: center;
     flex-direction: column;
     text-align: center;
-    background-color: #2B2A32;
+    background-color: #000;
     color: white;
 }
 
