--- a/talking-bot/css/style.css
+++ b/talking-bot/css/style.css
@@ -13,6 +13,9 @@ html, body {
     text-align: center;
     background-color: #000;
     color: white;
+    background-image: url(img/100reais.jpeg);
+    background-position: center;
+    background-size: cover;
 }
 
 .btn.active {
