--- a/talking-bot/css/style.css
+++ b/talking-bot/css/style.css
@@ -13,7 +13,7 @@ html, body {
     text-align: center;
     background-color: #000;
     color: white;
-    background-image: url(img/100reais.jpeg);
+    background-image: url(img/100reais.jpg);
     background-position: center;
     background-size: cover;
 }
