--- a/talking-bot/css/style.css
+++ b/talking-bot/css/style.css
@@ -12,7 +12,7 @@ html, body {
     flex-direction: column;
     text-align: center;
     background-color: #000;
-    color: white;
+    color: #000;
     background-image: url(../img/100reais.jpg);
     background-position: center;
     background-size: cover;
