--- a/talking-bot/css/style.css
+++ b/talking-bot/css/style.css
@@ -35,6 +35,10 @@ html, body {
     height: 100px;
 }
 
+#acc {
+    
+}
+
 @-webkit-keyframes left-in { 
     0% { -webkit-transform: translateX(-100%); opacity: 1; }
     100% { -webkit-transform: translateX(0%); opacity: 1; }
