--- a/talking-bot/css/style.css
+++ b/talking-bot/css/style.css
@@ -16,6 +16,17 @@ html, body {
     background-image: url(../img/100.jpg);
     background-position: center;
     background-size: cover;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+     user-select: none;
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     flex-direction: column;
+     text-align: center;
 }
 
 .btn.active {
