--- a/finish-line/css/style.css
+++ b/finish-line/css/style.css
@@ -79,7 +79,7 @@ html, body {
 }
 
 #red {
-   background: url(../img/eye-,left.png);
+   background: url(../img/eye-left.png);
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
