--- a/finish-line/css/style.css
+++ b/finish-line/css/style.css
@@ -105,3 +105,15 @@ html, body {
     flex-direction: column;
     text-align: center;
 }
+
+#result {
+   width: 100%
+   position: fixed;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   flex-direction: row;
+   text-align: center;
+   bottom: 40%;
+   font-size: 30px;
+}
