--- a/chess/css/style.css
+++ b/chess/css/style.css
@@ -12,7 +12,7 @@ html, body {
     flex-direction: column;
     text-align: center;
     background-color: #2f2e40;
-    color: #2f2e40;
+    color: #fff;
     --background-image: url(../img/100.jpg);
     background-position: center;
     background-size: cover;
