--- a/chess/css/style.css
+++ b/chess/css/style.css
@@ -88,3 +88,11 @@ html, body {
    width: 30px;
    height: 30px;
 }
+
+.invisible {
+   line-height: 30px;
+   text-align: center;
+   color: #fff;
+   width: 30px;
+   height: 30px;
+}
