--- a/jumper-frog/css/style.css
+++ b/jumper-frog/css/style.css
@@ -78,9 +78,22 @@ html, body {
    background: #446cad;
 }
 
+#frog {
+   position: absolute;
+   background: #5c4a36;
+   background-image: url(/img/frog.png);
+   justify-content: center;
+   align-items: center;
+   flex-direction: column;
+   width: 30px;
+   height: 30px;
+}
+
 .trunk {
    position: absolute;
    background: #5c4a36;
    width: 30px;
    height: 30px;
+   top: 270px;
+   left: 135px;
 }
