--- a/jumper-frog/css/style.css
+++ b/jumper-frog/css/style.css
@@ -67,13 +67,14 @@ html, body {
 }
 
 #river {
+   position: absolute;
    width: 300px;
    height: 300px;
    background: #446cad;
 }
 
 #frog {
-   position: absolute;
+   position: relative;
    background-image: url(../img/frog.png);
    background-position: center;
    background-size: cover;
