--- a/balance/css/style.css
+++ b/balance/css/style.css
@@ -47,3 +47,9 @@ html, body {
     bottom: 10px;
     margin: 0px;
 }
+
+#product-list {
+    width: 90vw;
+    height: 20vh;
+    border: 2px solid black;
+}
