--- a/balance/css/style.css
+++ b/balance/css/style.css
@@ -49,6 +49,9 @@ html, body {
 }
 
 #product-list {
+    background: #999966;
+    color: #000;
+    margin-top: 20px;
     width: 90vw;
     height: 20vh;
     border: 2px solid black;
