--- a/balance/css/style.css
+++ b/balance/css/style.css
@@ -78,10 +78,11 @@ td {
 #total {
     margin-top: 20px;
     display: flex;
-    justify-content: right;
-    align-items: right;
+    justify-content: center;
+    align-items: center;
     flex-direction: row;
     text-align: right;
+    width: 90vw;
 }
 
 .btn {
