--- a/stairsfany/css/style.css
+++ b/stairsfany/css/style.css
@@ -37,6 +37,15 @@ html, body {
      background-image: url(../img/stairs.png);
 }
 
+.container {
+     width: 180px;
+     height: 320px;
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     flex-direction: row;
+}
+
 #version-info {
     text-align: left;
     position: fixed;
