--- a/gong/css/style.css
+++ b/gong/css/style.css
@@ -43,7 +43,7 @@ html, body {
 
 .wave {
     width: 90vw;
-    height: 100px;
+    height: 90vw;
 }
 
 #title {
@@ -64,57 +64,4 @@ html, body {
     left: 10px;
     bottom: 10px;
     margin: 0px;
-}
-
-#river {
-   position: absolute;
-   width: 300px;
-   height: 300px;
-   background: #446cad;
-}
-
-#frog {
-   position: absolute;
-   background-image: url(../img/frog.png);
-   background-position: center;
-   background-size: cover;
-   width: 30px;
-   height: 30px;
-   top: 270px;
-   left: 135px;
-}
-
-#frog-2 {
-   position: absolute;
-   transform: translateY(-100%);
-   background-image: url(../img/frog.png);
-   background-position: center;
-   background-size: cover;
-   width: 30px;
-   height: 30px;
-   top: 30px;
-   left: 135px;
-}
-
-#frog-3 {
-   position: absolute;
-   transform: translateY(-100%);
-   background-image: url(../img/frog.png);
-   background-position: center;
-   background-size: cover;
-   width: 15px;
-   height: 15px;
-   top: 7px;
-   left: 157px;
-}
-
-.leaf {
-   width: 30px;
-   height: 30px;
-   left: 135px;
-   position: absolute;
-   transform: translateY(-100%);
-   background-image: url(../img/leaf.png);
-   background-position: center;
-   background-size: cover;
 }
