--- a/johrei_counter/css/style.css
+++ b/johrei_counter/css/style.css
@@ -29,10 +29,8 @@ html, body {
      text-align: center;
 }
 
-#maze {
-     width: 300px;
-     height: 300px;;
-     bacground: rgba(255, 255, 255);
+#counter {
+   font-size: 50px;
 }
 
 #version-info {
