--- a/johrei_counter/css/style.css
+++ b/johrei_counter/css/style.css
@@ -29,6 +29,14 @@ html, body {
      text-align: center;
 }
 
+.line {
+     width: 100%;
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     flex-direction: row;
+}
+
 #counter {
    font-size: 150px;
 }
