--- a/e-shield/css/style.css
+++ b/e-shield/css/style.css
@@ -71,8 +71,8 @@ html, body {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    width: 100px;
-    height: 100px;
+    width: 100%;
+    height: 100%;
     border: 1px black solid;
     border-radius: 5px;
     background-color: #212026;
