--- a/e-shield/css/style.css
+++ b/e-shield/css/style.css
@@ -70,8 +70,18 @@ html, body {
     position: fixed;
     top: 30%;
     left: 20%;
-    width: 80%;
+    width: 60%;
     height: 40%;
+}
+
+#d {
+    position: fixed;
+    top: 30%;
+    left: 20%;
+    width: 60%;
+    height: 40%;
+    font-size: 100px;
+    color: white;
 }
 
 #camera-canvas {
