--- a/odometer/css/style.css
+++ b/odometer/css/style.css
@@ -1,7 +1,7 @@
 /* Optional: Makes the sample page fill the window. */
 html, body {
     font-family: 'VT323', monospace !important;
-    font-size: 25px;
+    font-size: 20px;
     margin: 0;
     padding: 0;
     height: 100%;
@@ -29,47 +29,25 @@ html, body {
      text-align: center;
 }
 
-#camera-canvas {
-    margin-top: 25%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    width: 100px;
-    height: 100px;
-    border: 2px gold solid;
-    border-radius: 50%;
-    background-color: #212026;
-    box-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
+#timer {
+    font-size: 50px;
 }
 
-.btn.active {
-    border: 2px solid black;
-    background-color: black;
-    color: white;
+.line {
+     width: 100%;
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     flex-direction: row;
 }
 
-.btn {
-    border: 2px solid black;
-    background-color: white;
-    color: black;
+.line button {
+     margin: 10px;
+     border: 2px solid black;
 }
 
-.wave {
-    width: 90vw;
-    height: 90vw;
-}
-
-#title {
-    position: fixed;
-    top: 10px;
-    font-size: 40px;
-}
-
-#mic {
-    position: fixed;
-    right: 10px;
-    bottom: 10px;
+#counter {
+   font-size: 150px;
 }
 
 #version-info {
