--- a/odometer/css/style.css
+++ b/odometer/css/style.css
@@ -63,7 +63,7 @@ html, body {
     width: 20px;
     height: 20px;
     border-radius: 50%;
-    background-color: #000;
+    background-color: #fff;
 }
 
 #version-info {
