--- a/odometer/css/style.css
+++ b/odometer/css/style.css
@@ -59,7 +59,7 @@ html, body {
      border: 2px solid #aaa;
 }
 
-#circle, span {
+#circle.span {
     width: 20px;
     height: 20px;
     border-radius: 50%;
