--- a/odometer/css/style.css
+++ b/odometer/css/style.css
@@ -57,13 +57,22 @@ html, body {
      height: 100px;
      border-radius: 50%;
      border: 2px solid #aaa;
+     position: absolute;
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     flex-direction: column;
 }
 
-#circle.span {
+#circle span {
     width: 20px;
     height: 20px;
     border-radius: 50%;
     background-color: #fff;
+}
+
+#circle span :nth-of-type(1n) {
+  margin-left: 95px;
 }
 
 #version-info {
