--- a/odometer/css/style.css
+++ b/odometer/css/style.css
@@ -53,6 +53,8 @@ html, body {
 }
 
 #circle {
+     bottom: 10px;
+     right: 10px;
      width: 100px;
      height: 100px;
      border-radius: 50%;
@@ -69,6 +71,7 @@ html, body {
     height: 20px;
     border-radius: 50%;
     background-color: #fff;
+    position: absolute;
 }
 
 #circle span :nth-of-type(1n) {
