--- a/odometer/css/style.css
+++ b/odometer/css/style.css
@@ -78,10 +78,10 @@ html, body {
   margin-top: -45px;
 }
 #circle span:nth-of-type(2n) {
-  margin-right: -45px;
+  margin-left: 45px;
 }
 #circle span:nth-of-type(3n) {
-  margin-bottom: -45px;
+  margin-top: 45px;
 }
 #circle span:nth-of-type(4n) {
   margin-left: -45px;
