--- a/odometer/css/style.css
+++ b/odometer/css/style.css
@@ -79,6 +79,7 @@ html, body {
 }
 #circle span:nth-of-type(2n) {
   margin-left: 95px;
+  margin-top: 50px;
 }
 #circle span:nth-of-type(3n) {
   margin-top: 95px;
