--- a/odometer/css/style.css
+++ b/odometer/css/style.css
@@ -50,6 +50,7 @@ html, body {
      font-size: 50px;
      background-color: #000;
      border: 2px solid #aaa;
+     animation: odo 1s ease 0s 1 normal forwards;
 }
 
 #circle {
@@ -109,4 +110,16 @@ html, body {
     left: 10px;
     bottom: 10px;
     margin: 0px;
+}
+
+@keyframes odo {
+	0% {
+		opacity: 0;
+		transform: translateY(50px);
+	}
+
+	100% {
+		opacity: 1;
+		transform: translateY(0);
+	}
 }
