--- a/odometer/css/style.css
+++ b/odometer/css/style.css
@@ -27,6 +27,7 @@ html, body {
      align-items: center;
      flex-direction: column;
      text-align: center;
+     overflow: hidden;
 }
 
 #timer {
@@ -123,3 +124,37 @@ html, body {
 		transform: translateY(0);
 	}
 }
+
+#container {
+
+   height: 100vw;
+
+   -webkit-transform: rotate(90deg);
+
+   -moz-transform: rotate(90deg);
+
+   -o-transform: rotate(90deg);
+
+   -ms-transform: rotate(90deg);
+
+   transform: rotate(90deg);
+
+  }
+
+}
+
+@media only screen and (orientation:landscape){
+
+  #container {
+
+  -webkit-transform: rotate(0deg);
+
+  -moz-transform: rotate(0deg);
+
+  -o-transform: rotate(0deg);
+
+  -ms-transform: rotate(0deg);
+
+  transform: rotate(0deg);
+
+   }
