--- a/odometer/css/style.css
+++ b/odometer/css/style.css
@@ -128,33 +128,6 @@ html, body {
 #container {
 
     height: 100vh;
-
-   -webkit-transform: rotate(0deg);
-
-   -moz-transform: rotate(0deg);
-
-   -o-transform: rotate(0deg);
-
-   -ms-transform: rotate(0deg);
-
-   transform: rotate(0deg);
-
-  }
+    width: 100vw;
 
 }
-
-@media only screen and (orientation:landscape){
-
-  #container {
-
-  -webkit-transform: rotate(90deg);
-
-  -moz-transform: rotate(90deg);
-
-  -o-transform: rotate(90deg);
-
-  -ms-transform: rotate(90deg);
-
-  transform: rotate(90deg);
-
-   }
