--- a/odometer/css/style.css
+++ b/odometer/css/style.css
@@ -42,6 +42,13 @@ html, body {
      flex-direction: row;
 }
 
+.counters  div{
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     flex-direction: column;
+}
+
 .line {
      width: 100%;
      display: flex;
@@ -60,13 +67,6 @@ html, body {
      background-color: #000;
      border: 2px solid #aaa;
      animation: odo 1s ease 0s 1 normal forwards;
-}
-
-.counter  div{
-     display: flex;
-     justify-content: center;
-     align-items: center;
-     flex-direction: column;
 }
 
 #circle {
