--- a/odometer/css/style.css
+++ b/odometer/css/style.css
@@ -42,11 +42,22 @@ html, body {
      flex-direction: row;
 }
 
+.counters  i{
+     margin-bottom: 20px;
+}
+
 .counters  div{
      display: flex;
      justify-content: center;
      align-items: center;
      flex-direction: column;
+}
+
+.counter {
+     font-size: 50px;
+     background-color: #000;
+     border: 2px solid #aaa;
+     animation: odo 1s ease 0s 1 normal forwards;
 }
 
 .line {
@@ -60,13 +71,6 @@ html, body {
 .line button {
      margin: 10px;
      border: 2px solid black;
-}
-
-.counter {
-     font-size: 50px;
-     background-color: #000;
-     border: 2px solid #aaa;
-     animation: odo 1s ease 0s 1 normal forwards;
 }
 
 #circle {
