--- a/repeater/css/style.css
+++ b/repeater/css/style.css
@@ -59,6 +59,31 @@ html, body {
      margin: 20px;
 }
 
+.audio-wave-box {
+   position: fixed;
+   color: #fff;
+   background-color: rgba(0,0,0,0.5);
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   top: 10vw;
+   left: 10vw;
+   width: 80vw;
+   height: 20vw;
+   border-radius: 10px;
+   z-index: 9999;
+   box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+}
+
+.audio-wave-box.playing {
+   background-color: rgba(0,0,0,1);
+}
+
+.audio-wave-canvas {
+     width: 90%;
+     height: 90%;
+}
+
 #circle {
      bottom: 80px;
      width: 100px;
