--- a/map-gyro/css/style.css
+++ b/map-gyro/css/style.css
@@ -30,58 +30,16 @@ html, body {
      overflow: hidden;
 }
 
-.btn-mic {
-   border: 2px solid black;
-   background-color: white;
-   color: black;
-   position: fixed;
-   display: flex;
-   justify-content: center;
-   align-items: center;
-   bottom: 10vw;
-   right: 10vw;
-   width: 15vw;
-   height: 15vw;
-   max-width: 25vh;
-   max-height: 25vh;
-   border-radius: 50%;
-   z-index: 9999;
-   box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
-}
-
-.btn-mic.active {
-   border: 2px solid black;
-   background-color: black;
-   color: white;
-}
-
-.title  i{
-     margin: 20px;
-}
-
-.audio-wave-box {
-   position: fixed;
-   color: #fff;
-   background-color: rgba(0,0,0,0.5);
-   display: flex;
-   justify-content: center;
-   align-items: center;
-   top: 10vw;
-   left: 10vw;
-   width: 80vw;
-   height: 20vw;
-   border-radius: 10px;
-   z-index: 9999;
-   box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
-}
-
-.audio-wave-box.playing {
-   background-color: rgba(0,0,0,1);
-}
-
-.audio-wave-canvas {
-     width: 90%;
-     height: 90%;
+.map-box{
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    background-color: #fff;
+    opacity: 1;
 }
 
 #circle {
