--- a/map-gyro/css/style.css
+++ b/map-gyro/css/style.css
@@ -12,7 +12,7 @@ html, body {
     flex-direction: column;
     text-align: center;
     background-color: #2f2e40;
-    color: #fff;
+    color: #000;
     --background-image: url(../img/100.jpg);
     background-position: center;
     background-size: cover;
@@ -43,24 +43,26 @@ html, body {
 }
 
 #circle {
-     bottom: 80px;
-     width: 100px;
-     height: 100px;
-     border-radius: 50%;
-     border: 2px solid #aaa;
-     position: absolute;
-     display: flex;
-     justify-content: center;
-     align-items: center;
-     flex-direction: column;
+    bottom: 80px;
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    border: 2px solid #000;
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    z-index: 9999;
 }
 
 #circle span {
     width: 20px;
     height: 20px;
     border-radius: 50%;
-    background-color: #fff;
+    background-color: #000;
     position: absolute;
+    z-index: 9999;
 }
 
 #circle span:nth-of-type(1n) {
@@ -99,16 +101,5 @@ html, body {
     left: 10px;
     bottom: 10px;
     margin: 0px;
-}
-
-@keyframes odo {
-	0% {
-		opacity: 0;
-		transform: translateY(50px);
-	}
-
-	100% {
-		opacity: 1;
-		transform: translateY(0);
-	}
+    z-index: 9999;
 }
