--- a/map-gyro/css/style.css
+++ b/map-gyro/css/style.css
@@ -103,3 +103,12 @@ html, body {
     margin: 0px;
     z-index: 9999;
 }
+
+#indicators {
+    text-align: right;
+    position: fixed;
+    right: 10px;
+    bottom: 10px;
+    margin: 0px;
+    z-index: 9999;
+}
