--- a/map-gyro/css/style.css
+++ b/map-gyro/css/style.css
@@ -68,7 +68,7 @@ html, body {
 #circle #north-indicator {
     margin-left: 0px;
     margin-top: 0px;
-    padding: 30px;
+    padding: 30px 26.75px;
     border-radius: 50%;
     border: 1px solid #000;
     background-color: rgba(0, 0, 0, 0.3);
