--- a/map-gyro/css/style.css
+++ b/map-gyro/css/style.css
@@ -6,11 +6,6 @@ html, body {
     padding: 0;
     height: 100%;
     font-weight: 400 !important;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    text-align: center;
     background-color: #2f2e40;
     color: #000;
     --background-image: url(../img/100.jpg);
@@ -30,6 +25,15 @@ html, body {
      overflow: hidden;
 }
 
+#rotation {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+    background-color: #2f2e40;
+}
+
 .map-box{
     position: absolute;
     display: flex;
@@ -43,12 +47,9 @@ html, body {
 }
 
 #circle {
-    bottom: 80px;
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
-    border: 2px solid #000;
-    position: absolute;
+    position: fixed;
+    top: 0px;
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
