--- a/map-gyro/css/style.css
+++ b/map-gyro/css/style.css
@@ -67,12 +67,14 @@ html, body {
     width: 20px;
     height: 20px;
     border-radius: 50%;
-    background-color: #000;
+    background: rgb(157,4,4);
+background: linear-gradient(180deg, rgba(157,4,4,1) 0%, rgba(255,251,251,1) 50%, rgba(0,183,220,1) 100%);
     position: absolute;
     z-index: 9999;
 }
 
 #circle #north-indicator {
+    display: none;
     margin-left: 0px;
     margin-top: 0px;
     padding: 26.75px 30px;
