--- a/map-gyro/css/style.css
+++ b/map-gyro/css/style.css
@@ -67,13 +67,14 @@ html, body {
     width: 20px;
     height: 20px;
     border-radius: 50%;
-    background-color: #fff;
+    background-color: #000;
     position: absolute;
     z-index: 9999;
 }
 
 #circle #north-indicator {
-    background: rgb(157,4,4);
+    color: #fff;
+    background-color: rgba(0, 0, 0, 0.3);
     background: linear-gradient(180deg, 
     rgba(157,4,4,1) 0%, 
     rgba(157,4,4,1) 48%, 
@@ -85,7 +86,6 @@ html, body {
     padding: 26.75px 30px;
     border-radius: 50%;
     border: 2px solid #000;
-    background-color: rgba(0, 0, 0, 0.3);
     z-index: 9999;
 }
 
