--- a/map-gyro/css/style.css
+++ b/map-gyro/css/style.css
@@ -162,6 +162,25 @@ html, body {
    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 
+.btn-close-camera {
+   border: 2px solid black;
+   background-color: white;
+   color: black;
+   position: absolute;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   margin-right: -40vw;
+   margin-top: -10vh;
+   width: 15vw;
+   height: 15vw;
+   max-width: 25vh;
+   max-height: 25vh;
+   border-radius: 50%;
+   z-index: 9999;
+   box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+}
+
 .active {
    background-color: #283747;
    color: white;
