--- a/map-gyro/css/style.css
+++ b/map-gyro/css/style.css
@@ -170,8 +170,8 @@ html, body {
    display: flex;
    justify-content: center;
    align-items: center;
-   margin-top: -40px;
-   margin-left: 50px;
+   margin-top: 30px;
+   margin-left: 40vw;
    width: 10vw;
    height: 10vw;
    max-width: 15vh;
