--- a/map-gyro/css/style.css
+++ b/map-gyro/css/style.css
@@ -181,7 +181,7 @@ html, body {
    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 
-.btn-close-camera {
+.btn-camera {
    border: 2px solid black;
    background-color: white;
    color: black;
