--- a/map-gyro/css/style.css
+++ b/map-gyro/css/style.css
@@ -114,6 +114,7 @@ html, body {
     padding: 26.75px 30px;
     border-radius: 50%;
     border: 2px solid #000;
+    z-index: 9998;
 }
 
 #circle span:nth-of-type(1n) {
