--- a/map-gyro/css/style.css
+++ b/map-gyro/css/style.css
@@ -119,7 +119,7 @@ html, body {
     border: 2px solid #000;
     -webkit-transform-style: preserve-3d;
     -webkit-backface-visibility: hidden;
-    transform: rotateY( 180deg ), translate3d(0px, 0px, -2px);
+    transform: rotateY(180deg) translate3d(0px, 0px, -2px);
 }
 
 #circle span:nth-of-type(1n) {
