--- a/map-gyro/css/style.css
+++ b/map-gyro/css/style.css
@@ -121,6 +121,43 @@ html, body {
     transform: translate3d(0px, 0px, -5px);
 }
 
+.cylinder-face-0 {
+    position: absolute;
+    background-color: rgba(100, 100, 100, 1);
+    border: 2px solid #000;
+    width: 10px;
+    height: 50px;
+    -webkit-transform-style: preserve-3d;
+    transform: rotate3d(0, 1, 0, 90deg) translate3d(-25px, 0px, 0px);
+}
+.cylinder-face-1 {
+    position: absolute;
+    background-color: rgba(100, 100, 100, 1);
+    border: 2px solid #000;
+    width: 10px;
+    height: 50px;
+    -webkit-transform-style: preserve-3d;
+    transform: rotate3d(1, 1, 0, 90deg) translate3d(0px, -25px, 0px);
+}
+.cylinder-face-2 {
+    position: absolute;
+    background-color: rgba(100, 100, 100, 1);
+    border: 2px solid #000;
+    width: 10px;
+    height: 50px;
+    -webkit-transform-style: preserve-3d;
+    transform: rotate3d(0, 1, 0, 90deg) translate3d(25px, 0px, 0px);
+}
+.cylinder-face-3 {
+    position: absolute;
+    background-color: rgba(100, 100, 100, 1);
+    border: 2px solid #000;
+    width: 10px;
+    height: 50px;
+    -webkit-transform-style: preserve-3d;
+    transform: rotate3d(1, 1, 0, 90deg) translate3d(0px, 25px, 0px);
+}
+
 #circle span:nth-of-type(1n) {
     margin-left: 0px;
     margin-top: -95px;
