--- a/map-gyro/css/style.css
+++ b/map-gyro/css/style.css
@@ -128,7 +128,7 @@ html, body {
     width: 10px;
     height: 50px;
     -webkit-transform-style: preserve-3d;
-    transform: rotate3d(0, 1, 0, 90deg) translate3d(-25px, 0px, 0px);
+    transform: rotate3d(0, 1, 0, 90deg) translateY(-25px);
 }
 .cylinder-face-1 {
     position: absolute;
@@ -137,7 +137,7 @@ html, body {
     width: 10px;
     height: 50px;
     -webkit-transform-style: preserve-3d;
-    transform: rotate3d(1, 1, 0, 90deg) translate3d(0px, -25px, 0px);
+    transform: rotate3d(1, 1, 0, 90deg) translateX( -25px);
 }
 .cylinder-face-2 {
     position: absolute;
@@ -146,7 +146,7 @@ html, body {
     width: 10px;
     height: 50px;
     -webkit-transform-style: preserve-3d;
-    transform: rotate3d(0, 1, 0, 90deg) translate3d(25px, 0px, 0px);
+    transform: rotate3d(0, 1, 0, 90deg) translateY(25px);
 }
 .cylinder-face-3 {
     position: absolute;
@@ -155,7 +155,7 @@ html, body {
     width: 10px;
     height: 50px;
     -webkit-transform-style: preserve-3d;
-    transform: rotate3d(1, 1, 0, 90deg) translate3d(0px, 25px, 0px);
+    transform: rotate3d(1, 1, 0, 90deg) translateX(25px);
 }
 
 #circle span:nth-of-type(1n) {
