--- a/map-gyro/css/style.css
+++ b/map-gyro/css/style.css
@@ -115,7 +115,7 @@ html, body {
 #circle #north-indicator-backside {
     color: #fff;
     position: absolute;
-    background-color: rgba(0, 0, 0, 1);
+    background-color: rgba(100, 100, 100, 1);
     margin-left: 0px;
     margin-top: 0px;
     padding: 26.75px 30px;
@@ -132,7 +132,7 @@ html, body {
     width: 10px;
     height: 50px;
     -webkit-transform-style: preserve-3d;
-    transform: rotate3d(0, 1, 0, 90deg) translateY(-25px);
+    transform: rotateY(90deg) rotateX(90deg) translateY(-25px);
 }
 .cylinder-face-1 {
     position: absolute;
@@ -141,7 +141,7 @@ html, body {
     width: 10px;
     height: 50px;
     -webkit-transform-style: preserve-3d;
-    transform: rotate3d(1, 1, 0, 90deg) translateX( -25px);
+    transform: rotateY(90deg) translateX( -25px);
 }
 .cylinder-face-2 {
     position: absolute;
@@ -150,7 +150,7 @@ html, body {
     width: 10px;
     height: 50px;
     -webkit-transform-style: preserve-3d;
-    transform: rotate3d(0, 1, 0, 90deg) translateY(25px);
+    transform: rotateY(90deg) rotateX(90deg) translateY(25px);
 }
 .cylinder-face-3 {
     position: absolute;
@@ -159,7 +159,7 @@ html, body {
     width: 10px;
     height: 50px;
     -webkit-transform-style: preserve-3d;
-    transform: rotate3d(1, 1, 0, 90deg) translateX(25px);
+    transform: rotateY(90deg) translateX(25px);
 }
 
 #circle span:nth-of-type(1n) {
