--- a/map-gyro/css/style.css
+++ b/map-gyro/css/style.css
@@ -63,6 +63,7 @@ html, body {
 }
 
 #circle {
+    background: radial-gradient(circle, rgba(0,0,0,1) 3%, rgba(121,121,121,1) 52%, rgba(142,142,142,1) 74%);
     bottom: 80px;
     width: 100px;
     height: 100px;
