--- a/map-gyro/css/style.css
+++ b/map-gyro/css/style.css
@@ -100,12 +100,15 @@ html, body {
 #circle #north-indicator {
     position: relative;
     color: #fff;
-    background: linear-gradient(180deg, 
+    /*background: linear-gradient(180deg, 
     rgba(157,4,4,1) 0%, 
     rgba(157,4,4,1) 48%, 
     rgba(0,0,0,1) 50%, 
     rgba(0,183,220,1) 52%, 
-    rgba(0,183,220,1) 100%);
+    rgba(0,183,220,1) 100%);*/
+    background-image: url(../img/moeda10.png);
+    background-position: center;
+    background-size: cover;
     padding: 26.75px 30px;
     border-radius: 50%;
     border: 2px solid #000;
@@ -117,6 +120,9 @@ html, body {
     color: #fff;
     position: absolute;
     background-color: rgba(0, 0, 0, 1);
+    background-image: url(../img/moeda10-verso.png);
+    background-position: center;
+    background-size: cover;
     margin-left: 0px;
     margin-top: 0px;
     padding: 26.75px 30px;
