--- a/flip-funnel/css/style.css
+++ b/flip-funnel/css/style.css
@@ -42,6 +42,7 @@ html, body {
 }
 
 #funnel {
+    position: absolute;
     width: 64px;
     height: 64px;
     background-image: url(../img/funnel.png);
@@ -65,6 +66,7 @@ html, body {
 }
 
 #pic {
+    position: absolute;
     width: 64px;
     height: 64px;
     background-position: center;
