--- a/flip-funnel/css/style.css
+++ b/flip-funnel/css/style.css
@@ -33,6 +33,8 @@ html, body {
 #funnel-container {
     margin-left: 0px;
     margin-top: 0px;
+    width: 64px;
+    height: 64px;
     display: flex;
     justify-content: center;
     align-items: center;
