--- a/cube-finder/css/style.css
+++ b/cube-finder/css/style.css
@@ -43,16 +43,18 @@ html, body {
     z-index: 9999;
 }
 .front {
+    border: 2px solid #000;
     position: absolute;
+    margin-left: 0px;
+    margin-top: 0px;
     width: 64px;
     height: 64px;
     -webkit-transform-style: preserve-3d;
     transform: translate3d(0px, 0px, 32px);
 }
 .back {
+    border: 2px solid #000;
     position: absolute;
-    margin-left: 0px;
-    margin-top: 0px;
     width: 64px;
     height: 64px;
     -webkit-transform-style: preserve-3d;
