--- a/cube-finder/css/style.css
+++ b/cube-finder/css/style.css
@@ -101,6 +101,7 @@ html, body {
 }
 
 #camera-canvas {
+    margin-top: 50px;
     display: flex;
     justify-content: center;
     align-items: center;
